[tool.poetry]
name = "shap-memo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.1"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
interpret = "^0.2.6"
xgboost = "^1.4.2"
shap = "^0.39.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
